# writeonce-os

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  rust-toolchain.toml  writeonce-session-notes.md
.cargo/: config.toml
crates/writeonce-bootloader/: Cargo.toml  README.md
crates/writeonce-bootloader/src/: main.rs
crates/writeonce-initramfs/: Cargo.toml  README.md
crates/writeonce-initramfs/src/: cmdline.rs  discover.rs  lib.rs  main.rs  modules.rs  mount.rs  switch_root.rs
crates/writeonce-installer/: Cargo.toml  README.md
crates/writeonce-installer/examples/: target-os.json
crates/writeonce-installer/src/: bootloader.rs  confirm.rs  customize.rs  detect.rs  extract.rs  main.rs  manifest.rs  mkfs.rs  mount_.rs  partition.rs  prompt.rs  spec.rs  tui.rs  verify.rs
crates/writeonce-kerngen/: Cargo.toml
crates/writeonce-kerngen/src/: lib.rs  main.rs  probe.rs  types.rs
crates/writeonce-login/: Cargo.toml  build.rs
crates/writeonce-login/examples/etc/pam.d/: writeonce
crates/writeonce-login/examples/etc/writeonce/: login.toml  session-start.sh
crates/writeonce-login/src/: config.rs  lib.rs  main.rs  pam.rs  term.rs
crates/writeonce-logind/: Cargo.toml
crates/writeonce-logind/examples/: dbus-policy.conf
crates/writeonce-logind/src/: inhibitor.rs  main.rs  manager.rs  seat.rs  session.rs  state.rs
crates/writeonce-pid1/: Cargo.toml  README.md
crates/writeonce-pid1/src/: config.rs  exec.rs  main.rs  mount.rs  signal.rs
crates/writeonce-session-create/: Cargo.toml
crates/writeonce-session-create/src/: main.rs
crates/writeonce-svc/: Cargo.toml
crates/writeonce-svc/examples/services/: banner.service.toml  console.target.toml  dbus.service.toml  default.target.toml  dhcpcd.service.toml  graphical.target.toml  hello.service.toml  iwd.service.toml  logind.service.toml  multi-user.target.toml  sysinit.target.toml  writeonce-bootstrap.service.toml  writeonce-login.service.toml  writeonce-modules-load.service.toml
crates/writeonce-svc/src/: cgroup.rs  config.rs  control.rs  enabled.rs  graph.rs  lib.rs  main.rs  signal.rs  spawn.rs  state.rs
crates/writeonce-svc/tests/: service_toml.rs
docs/: kernel-build-history.md
docs/learning/: 00-concepts-coverage.md  containers-kernel-requirements.md  future-installer-remote-build.md  multi-gpu-portability.md  phase-0-cross-toolchain.md  phase-0-lfs-tools-layout.md  phase-0-temp-tools-result.md  phase-10-installer.md  phase-2-busybox.md  phase-2-chroot.md  phase-4-cgroup-isolation.md  phase-4-concurrency-and-io-uring.md  phase-4-dependency-graph.md  phase-4-service-toml-schema.md  phase-4d-logind-shim.md  phase-6-bootloader-efi-stub-delegation.md  phase-8-userspace-build-strategy.md  phase-8b-x11-protocol-stack.md  phase-8c-xorg-server-and-drm.md  phase-8d-gtk-stack.md  phase-8e-audio-stack.md  phase-8f-network-stack.md  phase-9-desktop-bringup.md  supply-chain-defense.md  systemd-feature-survey.md  t450-boot-debugging.md
plan/: 00-roadmap.md  developer-workstation-implementation.md  phase-0-toolchain.md  phase-1-target-prep.md  phase-10-packaging.md  phase-2-minimal-linux.md  phase-3-rust-pid1.md  phase-4-supervisor.md  phase-5-initramfs.md  phase-7-kerngen.md  phase-9-i3more.md
plan/Kernel7/: kernel-7.0-bump.md
plan/done/: phase-0-toolchain.md  phase-3-rust-pid1.md  phase-4-supervisor.md  phase-6-bootloader.md  phase-7-kernel.md  phase-7-kerngen.md  phase-8-x11-gtk4.md
plan/using-stock/: 00-overview.md
plan/writeonce-svc-fix/: escape-the-loop.md  fix-learn-from-scratch-boot.md  fix-libpam-and-dbus.md
scripts/: survey-target-machine.sh
