[package]
name        = "writeonce-bootloader"
version     = "0.1.0"
description = "WriteOnce OS — UEFI bootloader (Phase 6)."

edition      .workspace = true
license      .workspace = true
authors      .workspace = true
rust-version .workspace = true

# This crate is no_std and targets x86_64-unknown-uefi. Build with:
#   ./build/in-container.sh cargo build -p writeonce-bootloader \
#       --release --target x86_64-unknown-uefi
# The output at target/x86_64-unknown-uefi/release/writeonce-bootloader.efi
# is a PE/COFF binary the T450 UEFI firmware can load directly.

[dependencies]
uefi.workspace = true
# uefi-raw gives us the raw LoadedImageProtocol layout so we can write
# device_handle directly after LoadImage(FromBuffer) — the uefi-rs
# wrapper doesn't expose a setter. Required for the kernel's EFI stub
# to find initrd= relative to our boot device.
uefi-raw = "0.8"
log .workspace = true

[[bin]]
name = "writeonce-bootloader"
path = "src/main.rs"
