[package]
name        = "writeonce-installer"
version     = "0.1.0"
description = "WriteOnce OS — runtime installer: read artifacts from a Docker-driven build, write bootable image to a connected USB."

edition      .workspace = true
license      .workspace = true
authors      .workspace = true
rust-version .workspace = true

# Runs on the host (typically the workstation where the Docker build
# ran). Needs root to talk to /dev/sdX. Build alongside writeonce-login
# / writeonce-logind on the dynamic-glibc target (not musl).
#
# Runtime host tools required (any modern Linux distro provides them):
#   sgdisk        from gptfdisk
#   mkfs.vfat     from dosfstools
#   mkfs.ext4     from e2fsprogs
#   mount, umount from util-linux

[dependencies]
libc        .workspace = true
serde       .workspace = true
toml        .workspace = true
log         .workspace = true
env_logger  .workspace = true
signal-hook .workspace = true
tokio       .workspace = true
clap        .workspace = true
sha2        .workspace = true
tar         .workspace = true
zstd        .workspace = true
indicatif   .workspace = true
anyhow      .workspace = true
tempfile    .workspace = true
rpassword   .workspace = true
serde_json  .workspace = true
ratatui     .workspace = true
crossterm   .workspace = true

[[bin]]
name = "writeonce-installer"
path = "src/main.rs"
