[package]
name        = "writeonce-pid1"
version     = "0.1.0"
description = "WriteOnce OS — PID 1 prototype (reaping, mounts, signals, exec)."

edition      .workspace = true
license      .workspace = true
authors      .workspace = true
rust-version .workspace = true

[dependencies]
libc  .workspace = true
serde .workspace = true
toml  .workspace = true
